data/derived/comb/progs/unify/prog5091.ml.out
Characters 49-57:
  n mod 10 @ [] @ digitsOfInt(n/10);;
  ^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
